--- a/client/src/layouts/rootLayout/rootLayout.css
+++ b/client/src/layouts/rootLayout/rootLayout.css
@@ -4,7 +4,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 20px 20px 0;
 }
 
