--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,8 +1,9 @@
 .home {
-  min-height: 100%; /* 100% of 'main' in RootLayout */
+  height: 100%; /* 100% of 'main' in RootLayout */
   display: flex;
   align-items: center;
   gap: 80px;
+  overflow-y: auto;
 }
 
 /* Bg image */
@@ -166,7 +167,8 @@ h3 {
   }
   .left {
     width: 100%;
-    height: 60%;
+    /* height: 60%; */
+    height: auto;
     gap: 20px;
   }
   h1 {
@@ -178,7 +180,8 @@ h3 {
   }
   .right {
     width: 100%;
-    height: 40%;
+    height: auto;
+    /* height: 40%; */
   }
   .img-container {
     width: 90%;
